# serializer version: 1
# name: TestFormatSensors.test_format_minimal_sensor_json_output[0]
  dict({
    'description': None,
    'name': 'minimal_sensor',
    'next_tick_timestamp': None,
    'sensor_type': 'STANDARD',
    'status': 'RUNNING',
  })
# ---
# name: TestFormatSensors.test_format_minimal_sensor_text_output[0]
  '''
  Name:        minimal_sensor
  Status:      RUNNING
  Type:        STANDARD
  Description: None
  '''
# ---
# name: TestFormatSensors.test_format_sensor_json_output[0]
  dict({
    'description': 'Critical production sensor',
    'name': 'critical_sensor',
    'next_tick_timestamp': 1705311900.0,
    'sensor_type': 'AUTO_MATERIALIZE',
    'status': 'RUNNING',
  })
# ---
# name: TestFormatSensors.test_format_sensor_text_output[0]
  '''
  Name:        critical_sensor
  Status:      RUNNING
  Type:        AUTO_MATERIALIZE
  Description: Critical production sensor
  Next Tick:   2024-01-15 09:45:00 UTC
  '''
# ---
# name: TestFormatSensors.test_format_sensors_json_output[0]
  dict({
    'items': list([
      dict({
        'description': 'Daily processing sensor',
        'name': 'daily_sensor',
        'next_tick_timestamp': 1705311000.0,
        'sensor_type': 'STANDARD',
        'status': 'RUNNING',
      }),
      dict({
        'description': 'Asset change sensor',
        'name': 'asset_sensor',
        'next_tick_timestamp': None,
        'sensor_type': 'ASSET',
        'status': 'STOPPED',
      }),
      dict({
        'description': None,
        'name': 'minimal_sensor',
        'next_tick_timestamp': None,
        'sensor_type': 'MULTI_ASSET',
        'status': 'RUNNING',
      }),
    ]),
    'total': 3,
  })
# ---
# name: TestFormatSensors.test_format_sensors_text_output[0]
  '''
  NAME            STATUS   TYPE
  daily_sensor    RUNNING  STANDARD
  asset_sensor    STOPPED  ASSET
  minimal_sensor  RUNNING  MULTI_ASSET
  '''
# ---
